# plasma-wetter_stationen

./: CMakeLists.txt  README.md
applet/: CMakeLists.txt  wetterstationenapplet.cpp  wetterstationenapplet.h
extensions/: CMakeLists.txt  cachedimg.cpp  cachedimg.h  cachedimg_plugin.cpp  cachedimg_plugin.h  qmldir
plasmoid/: metadata.desktop
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: configWetterStationen.qml  main.qml
